# probe-verus

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  TESTING.md
.github/workflows/: ci.yml  docker-publish.yml
action/: README.md  action.yml
action-extract/: README.md  action.yml
docker/: Dockerfile  README.md
docs/: DUPLICATE_SYMBOL_BUG.md  HOW_IT_WORKS.md  IMPL_OVERWRITE_BUG_FIX.md  PROBE_RUST_SPLIT_BRAINSTORM.md  SCHEMA.md  TEST_GAP_ANALYSIS.md  TOOL_SEPARATION_DISCUSSION.md  TRAIT_IMPL_SYMBOL_PATTERNS.md  USAGE.md  VERIFICATION_ARCHITECTURE.md  format.md  probe-verus-schemas.md
scripts/: test_merge_libsignal_libcrux.sh
spec_taxonomy_examples/: spec-taxonomy-curve25519-dalek.toml  spec-taxonomy-default.toml  spec-taxonomy-pmemlog.toml
src/: constants.rs  error.rs  lib.rs  main.rs  metadata.rs  path_utils.rs  scip_cache.rs  taxonomy.rs  tool_manager.rs  verification.rs  verus_parser.rs
src/commands/: atomize.rs  callee_crates.rs  extract.rs  functions.rs  merge_atoms.rs  mod.rs  run.rs  run_verus.rs  setup.rs  specify.rs  specs_data.rs  stubify.rs  tracked_csv.rs  verify.rs
tests/: duplicate_symbols.rs  extract_backward_compat.rs  extract_check.rs  function_coverage.rs  merge_atoms.rs  unified_extract.rs  unified_verify.rs
tests/fixtures/extract_golden/: golden.json
tests/fixtures/merge_test/: atoms_a.json  atoms_b.json  atoms_combined.json
tests/fixtures/unified_test/: atoms.json  proofs.json  specs.json
tools/: INSTALL.md  README.md
tools/bash/: install_rust_analyzer.sh  install_scip.sh  install_verus.sh  install_verus_analyzer.sh  install_verus_from_source.sh  install_z3.sh
tools/python/: generate_scip_index.py  install_rust_analyzer.py  install_scip.py  install_verus.py  install_verus_analyzer.py  install_verus_from_source.py  install_z3.py
