[workspace]

[package]
name = "probe-verus"
version = "6.2.1"
edition = "2021"
description = "Probe Verus projects: generate call graph atoms and analyze verification results"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Beneficial-AI-Foundation/probe-verus"
keywords = ["verus", "verification", "call-graph", "code-analysis", "proof"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "probe-verus"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
regex = "1.10"
verus_syn = { version = "0.0.0-2025-11-16-0050", features = ["full", "visit", "parsing"] }
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
walkdir = "2.4"
rust-lapper = "1.1"
thiserror = "1.0"
toml = "0.8"
ureq = "2.9"
flate2 = "1.0"
tar = "0.4"
dirs = "5.0"
zip = { version = "8.1", default-features = false, features = ["deflate"] }
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }

[dev-dependencies]
probe-extract-check = { git = "https://github.com/Beneficial-AI-Foundation/probe" }
tempfile = "3.10"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
